--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -14,6 +14,8 @@
 @import "vars";
 @import "mixins";
 @import "global";
+@import "forms";
+@import "reference";
 
 
 /* ----- Component Styles ----- */
