--- a/app/assets/styles/_mixins.scss
+++ b/app/assets/styles/_mixins.scss
@@ -35,3 +35,42 @@
     #{ $property } : ($sizeValue * 10) + px;
     #{ $property } : $sizeValue + rem;
 }
+
+
+/* ----- Misc ----- */
+
+@mixin text-shadow($color: $pure-black, $opacity: .25) {
+    text-shadow: 1px 1px 2px rgba($color, $opacity);
+}
+
+@mixin transition($property: all) {
+    transition: $property 500ms ease-in-out;
+}
+
+@mixin color-item($colorName) {
+    &:before {
+        background-color: #{$colorName};
+    }
+    &:after {
+        content: '' + $colorName;
+    }
+}
+
+@mixin clearfix() {
+    &:after {
+        content: ".";
+        display: block;
+        height: 0;
+        clear: both;
+        visibility: hidden;
+    }
+}
+
+@mixin sr-only() {
+    position: absolute;
+    left: -10000px;
+    top: auto;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+}
