--- a/app/assets/styles/_vars.scss
+++ b/app/assets/styles/_vars.scss
@@ -21,28 +21,50 @@ $color-grey-lightest: #ddd;
 
 // Brand Colors
 $color-primary: red;
-$color-primary-light: mix($color-primary, $color-white, 25%);
-$color-primary-dark: mix($color-primary, $color-black, 25%);
+$color-primary-light: mix($color-primary, $color-white, 50%);
+$color-primary-dark: mix($color-primary, $color-black, 50%);
 
-$color-secondary: green;
-$color-secondary-light: mix($color-secondary, $color-white, 25%);
-$color-secondary-dark: mix($color-secondary, $color-black, 25%);
+$color-secondary: blue;
+$color-secondary-light: mix($color-secondary, $color-white, 50%);
+$color-secondary-dark: mix($color-secondary, $color-black, 50%);
 
-$color-tertiary: blue;
-$color-tertiary-light: mix($color-tertiary, $color-white, 25%);
-$color-tertiary-dark: mix($color-tertiary, $color-black, 25%);
+$color-tertiary: green;
+$color-tertiary-light: mix($color-tertiary, $color-white, 50%);
+$color-tertiary-dark: mix($color-tertiary, $color-black, 50%);
 
 // Other
 $color-text: $color-black;
-$border-color: $color-grey-lightest;
+$color-border: $color-grey-lightest;
+$color-link: $color-primary;
+$color-link-hover: $color-primary-dark;
 
-// $colors: ;
+$colors: (
+    (color-primary, $color-primary),
+    (color-primary-light, $color-primary-light),
+    (color-primary-dark, $color-primary-dark),
+    (color-secondary, $color-secondary),
+    (color-secondary-light, $color-secondary-light),
+    (color-secondary-dark, $color-secondary-dark),
+    (color-tertiary, $color-tertiary),
+    (color-tertiary-light, $color-tertiary-light),
+    (color-tertiary-dark, $color-tertiary-dark),
+    (color-white, $color-white),
+    (color-black, $color-black),
+    (color-grey, $color-grey),
+    (color-grey-light, $color-grey-light),
+    (color-grey-dark, $color-grey-dark),
+    (color-grey-lightest, $color-grey-lightest),
+    (color-text, $color-text),
+    (color-border, $color-border),
+    (color-link, $color-link),
+    (color-link-hover, $color-link-hover)
+);
 
 
 /* ----- Typography ----- */
 
-$font-family-default: sans-serif;
-$font-family-display: serif;
+$font-family-default: Arial, sans-serif;
+$font-family-display: Arial, sans-serif;
 
 $heading-size-xl    : 3rem;
 $heading-size-l     : 2.5rem;
@@ -56,6 +78,8 @@ $copy-size-m   : 1rem;
 $copy-size-s   : 0.75rem;
 $copy-size-xs  : 0.5rem;
 
+$font-size-default: 16px;
+
 $line-height-l: 1.5;
 $line-height-m: 1.25;
 $line-height-s: 1.1;
@@ -68,10 +92,11 @@ $content-max-width: 940px;
 
 // Starting breakpoints - use more as needed in component and page files
 
-$mobile     : 320px;
-$tablet     : 640px;
-$desktop    : 1024px;
-$widescreen : 1440px;
+$bp-xs      : 320px;
+$bp-s       : 640px;
+$bp-m       : 1024px;
+$bp-l       : 1200px;
+$bp-xl      : 1440px;
 
 
 /* ----- Layering ----- */
@@ -82,37 +107,12 @@ $z-nav: 1000;
 
 /* ----- Icon Font ----- */
 
-$fonticons:
-    'account' '\e617',
-    'add' '\e600',
-    'checkbox-big' '\e60b',
-    'checkbox-big-checked' '\e60a',
-    'dot' '\e605',
-    'dotted-line-big-tile' '\e606',
-    'dotted-line-tile' '\e607',
-    'dropdown-menu-dotted-rule' '\e609',
-    'facebook' '\e61f',
-    'facebook-iso' '\e603',
-    'flavor-of-the-month' '\e60d',
-    'menu' '\e60c',
-    'modal-close' '\e627',
-    'pinterest' '\e620',
-    'pointer-down' '\e628',
-    'pointer-left' '\e629',
-    'pointer-right' '\e62a',
-    'pointer-up' '\e62b',
-    'remove' '\e601',
-    'spoon' '\e622',
-    'spoon-reg' '\e621',
-    'stamp-facebook' '\e602',
-    'twitter' '\e623',
-    'youtube' '\e624'
-;
 
 
 /* ----- Other ----- */
 
 $border-width: 3px;
+$radius: 6px;
 $transparency: 0.5;
 $box-shadow: 0 0 1px rgba($color-black, $transparency);
 $text-shadow: 0 0 1px rgba($color-black, $transparency);
