--- a/app/layouts/minimal.hbs
+++ b/app/layouts/minimal.hbs
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{#if page.title }}{{ page.title }} || {{/if}}Styleguide Starter</title>
+        <title>{{#if page.title }}{{ page.title }} | {{/if}}Styleguide Starter</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -13,11 +13,11 @@
         <!-- endbower -->
         <!-- endbuild -->
 
-        <!-- desktop.css for IE8 and below removes media queries -->
+        <!-- legacy.css for IE8 and below removes media queries -->
 
         <!--[if lt IE 9]>
             <link rel="stylesheet" href="assets/styles/legacy.css">
-            <![endif]-->
+        <![endif]-->
 
         <!--[if gt IE 8]><!-->
             <!-- build:css(.tmp) assets/styles/main.css -->
