--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -28,3 +28,4 @@
 @import "../../pages/index/index";
 @import "../../pages/styleguide/styleguide";
 @import "../../pages/component-library/component-library";
+@import "../../components/cta/cta";
