--- a/app/layouts/minimal.hbs
+++ b/app/layouts/minimal.hbs
@@ -25,6 +25,8 @@
             <!-- endbuild -->
         <!--<![endif]-->
 
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
     </head>
     <body class="body--minimal">
 
@@ -44,6 +46,7 @@
         <script>window.jQuery || document.write('<script src="assets/scripts/vendor/jquery-1.11.3.min.js"><\/script>')</script>
 
         <!-- build:js(app/bower_components) assets/scripts/vendor.js -->
+            <script src="assets/scripts/vendor/prism.js"></script>
         <!-- bower:js -->
         <!-- endbower -->
         <!-- endbuild -->
