--- a/app/assets/styles/_mixins.scss
+++ b/app/assets/styles/_mixins.scss
@@ -43,8 +43,8 @@
     text-shadow: 1px 1px 2px rgba($color, $opacity);
 }
 
-@mixin transition($property: all) {
-    transition: $property 500ms ease-in-out;
+@mixin transition($property: all, $timing: 500ms) {
+    transition: $property $timing ease-in-out;
 }
 
 @mixin color-item($colorName) {
