--- a/app/assets/styles/_vars.scss
+++ b/app/assets/styles/_vars.scss
@@ -20,11 +20,11 @@ $color-grey-dark: #444;
 $color-grey-lightest: #ddd;
 
 // Brand Colors
-$color-primary: red;
+$color-primary: #ed1c27;
 $color-primary-light: mix($color-primary, $color-white, 50%);
 $color-primary-dark: mix($color-primary, $color-black, 50%);
 
-$color-secondary: blue;
+$color-secondary: #1a7bd5;
 $color-secondary-light: mix($color-secondary, $color-white, 50%);
 $color-secondary-dark: mix($color-secondary, $color-black, 50%);
 
@@ -63,8 +63,8 @@ $colors: (
 
 /* ----- Typography ----- */
 
-$font-family-default: Arial, sans-serif;
-$font-family-display: Arial, sans-serif;
+$font-family-default: 'Open Sans', sans-serif;
+$font-family-display: $font-family-default;
 
 $heading-size-xl    : 3rem;
 $heading-size-l     : 2.5rem;
@@ -78,7 +78,7 @@ $copy-size-m   : 1rem;
 $copy-size-s   : 0.75rem;
 $copy-size-xs  : 0.5rem;
 
-$font-size-default: 16px;
+$font-size-default: 14px;
 
 $line-height-l: 1.5;
 $line-height-m: 1.25;
