--- a/app/layouts/default.hbs
+++ b/app/layouts/default.hbs
@@ -25,6 +25,8 @@
             <!-- endbuild -->
         <!--<![endif]-->
 
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,300&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
     </head>
     <body>
 
